--- a/style.css
+++ b/style.css
@@ -40,9 +40,7 @@ html {
 body {
   font-family: 'Dosis', 'Aqum 2 Small caps', sans-serif;
   min-width: 360px;
-  height: 100vh;
-  background-color: #607483;
-  color: #f2eff3c4;
+  height: 100vh; 
 }
 
 .container {
@@ -50,7 +48,12 @@ body {
   width:100%;
   max-width:1440px;
   margin: 0 auto;
-  padding: 0 10%;
+  padding: 0 5%;
+  background-color: #607483;
+  color: #f2eff3c4;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
  }
 
 li {
@@ -96,10 +99,33 @@ h1, h2 {
 }
 
 .my-avatar {
-  max-width: 122px;
-  max-height: 140px;
+  max-width: 298.25px;
+  max-height: 320px;
 }
 
 .nav-list-item {
    padding: 0 20px;
+}
+
+.article-title {
+  width: 25%;
+  text-align: center;
+  padding: 1% ;
+}
+
+.article-title-title {
+  font-size: 1.5em;
+  letter-spacing: .2rem; 
+}
+
+.article-title-desc {
+  font-size: 1.2em;
+  font-weight: 550;
+}
+
+.article-title img {
+  border-radius: 50%;
+  box-shadow:
+  inset 0 -3em 3em rgba(0,0,0,0.1),
+        0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
