--- a/style.css
+++ b/style.css
@@ -99,23 +99,28 @@ h1, h2 {
 }
 
 .my-avatar {
-  max-width: 298.25px;
-  max-height: 320px;
+  width: 75%;
+  height: 75%;
 }
 
 .nav-list-item {
    padding: 0 20px;
 }
 
+.article {
+  width: 30%;
+  padding: 4%;
+  background-color: #f2eff3c4;
+  color: #607483;
+}
+
 .article-title {
-  width: 25%;
   text-align: center;
-  padding: 1% ;
 }
 
 .article-title-title {
   font-size: 1.5em;
-  letter-spacing: .2rem; 
+  letter-spacing: .2rem;
 }
 
 .article-title-desc {
