--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h1, h2 {
   text-transform: uppercase;
 }
 
-.items-list-items, .footer-list-item, .nav-list-item {
+.items-list-items, .footer-list-item, .nav-list-item, .contact-list-item {
   list-style-type: none;
 }
 
@@ -128,9 +128,14 @@ h1, h2 {
   font-weight: 550;
 }
 
+.contact-list-link {
+  color: #607483;
+}
+
 .article-title img {
   border-radius: 50%;
   box-shadow:
   inset 0 -3em 3em rgba(0,0,0,0.1),
         0.3em 0.3em 1em rgba(0,0,0,0.3);
 }
+
