--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 
 .container {
   height: 100%;
-  width:100%;
+  width: 100%;
   max-width:1440px;
   margin: 0 auto;
   padding: 0 5%;
@@ -56,13 +56,14 @@ body {
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
  }
 
-li {
+ li {
   list-style-type: "\1F588";
 }
 
 .main {
+  display: flex;
   border: solid 1px #f2eff3;
-  min-height: calc(100% - 70px);
+  /* min-height: calc(100% - 70px); */
 }
 
 a {
@@ -99,8 +100,7 @@ h1, h2 {
 }
 
 .my-avatar {
-  width: 75%;
-  height: 75%;
+  max-width: 50%;
 }
 
 .nav-list-item {
@@ -111,8 +111,7 @@ h1, h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 20px; 
-  width: 30%;
+  gap: 20px;
   padding: 4%;
   background-color: #f2eff3c4;
   color: #607483;
@@ -120,6 +119,7 @@ h1, h2 {
 
 .article-title {
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .article-title-title {
@@ -130,6 +130,7 @@ h1, h2 {
 .article-subtitle {
   text-transform: uppercase;
   letter-spacing: 0.2rem;
+  padding-bottom: 10px;
 }
 
 .article-title-desc {
@@ -156,4 +157,19 @@ h1, h2 {
 
 .article-list {
   padding-left: 20%;
+}
+
+.about {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-bottom: 4%;
+}
+
+.about-desc {
+  font-family: 'Aqum 2 Small caps';
+  font-style: italic;
+  font-size: smaller;
+  max-width: 70%;
+  text-align:justify;
 }
