--- a/style.css
+++ b/style.css
@@ -159,17 +159,32 @@ h1, h2 {
   padding-left: 20%;
 }
 
-.about {
+.section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding-bottom: 4%;
+  justify-content: space-around;  
 }
 
 .about-desc {
   font-family: 'Aqum 2 Small caps';
   font-style: italic;
   font-size: smaller;
-  max-width: 70%;
+  max-width: 80%;
   text-align:justify;
+  padding-left: 25%;
+}
+
+.about, .edu {
+  min-width: 95%;
+  padding: 20px;
+}
+
+.edu-list {
+  font-family: 'Aqum 2 Small caps';
+  text-transform: lowercase;
+  padding-left: 25%;
+}
+
+.edu-item-sublist {
+  padding-left: 20%;
 }
